--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title>Hello World</title>
+  <title>Museo Web</title>
 </head>
 <body>
-<h1>This is a heading</h1>
+<h1>Bienvenido</h1>
 </body>
 </html>
