--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#page-top">Sobre Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Puntos de Interes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#mx-2">Contacto</a></li>
                     </ul>
                 </div>
             </div>
