--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#page-top">Sobre Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#pagina-inicial">Sobre Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Puntos de Interes</a></li>
                         <li class="nav-item"><a class="nav-link" href="#mx-2">Contacto</a></li>
                     </ul>
@@ -34,10 +34,11 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+        <header class="masthead" >
+		
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center" <img class="img-fluid mb-3 mb-lg-0" src="assets/img/museum.jpg" alt="..." /></div>
                 <div class="d-flex justify-content-center">
-                    <div class="text-center">
+                    <div class="text-center" >
                         <h1 class="mx-auto my-0 text-uppercase">Museo Web</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Museo picadisimo.</h2>
                         <a class="btn btn-primary" href="#projects">Ver Puntos</a>
