--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <!-- Masthead-->
         <header class="masthead" >
 		
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center" <img class="img-fluid mb-3 mb-lg-0" src="assets/img/museum.jpg" alt="..." /></div>
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center" >
                         <h1 class="mx-auto my-0 text-uppercase">Museo Web</h1>
