--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#pagina-inicial">Sobre Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Puntos de Interes</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#mx-2">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#pagina-contacto">Contacto</a></li>
                     </ul>
                 </div>
             </div>
@@ -36,7 +36,7 @@
         <!-- Masthead-->
         <header class="masthead" >
 		
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center" <img class="img-fluid mb-3 mb-lg-0" src="assets/img/museum.jpg" alt="..." /></div>
                 <div class="d-flex justify-content-center">
                     <div class="text-center" >
                         <h1 class="mx-auto my-0 text-uppercase">Museo Web</h1>
@@ -94,7 +94,7 @@
             </div>
         </section>
         <!-- Contacto-->
-        <section class="contact-section bg-black">
+        <section class="contact-section bg-black" id="pagina-contacto">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-4 mb-3 mb-md-0">
