--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                <div class="project-text w-100 my-auto text-center text-lg-righ">
                                     <h4 class="text-white">Arlecchino</h4>
                                     <p class="mb-0 text-white-50">caaaaapo.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
