--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#pagina-inicial">Sobre Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Puntos de Interes</a></li>
                         <li class="nav-item"><a class="nav-link" href="#pagina-contacto">Contacto</a></li>
+			 <li class="nav-item"><a class="nav-link" href="#pagina-contacto">Ingresar Punto Interes</a></li>
                     </ul>
                 </div>
             </div>
