--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="nav-item"><a class="nav-link" href="#pagina-inicial">Sobre Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="#projects">Puntos de Interes</a></li>
                         <li class="nav-item"><a class="nav-link" href="#pagina-contacto">Contacto</a></li>
-			 <li class="nav-item"><a class="nav-link" href="#pagina-contacto">Ingresar Punto Interes</a></li>
+			 <li class="nav-item"><a class="nav-link" href="#pagina-ingresar">Ingresar Punto Interes</a></li>
                     </ul>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 	    
-	    <div class="col-md-6">
+	    <div class="col-md-6" id="pagina-ingresar">
 		  <form>
 		    <div class="form-group">
 		    <label>First name</label>
