--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
        
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 	    <!-- Ingresar Punto->
-	 <section class="Ingresar-section bg-black" id="pagina-ingresar">
+	 <section class="Ingresar-section bg-white" id="pagina-ingresar">
 	    <div class="col-md-6 "  >
 		  <form>
 		    <div class="form-group">
