--- a/index.html
+++ b/index.html
@@ -140,21 +140,17 @@
        
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 	    <!-- Ingresar Punto->
-	 <div class="col-md-6">
+	 <div class="col-md-6" id="pagina-ingresar">
 	  <form>
 	    <div class="form-group">
-	    <label>First name</label>
-	    <input type="text" class="form-control" id="first-name" placeholder="first name">
+	    <label>Nombre del Punto de Interés</label>
+	    <input type="text" class="form-control" id="puntointeres" placeholder="nombre">
 	  </div>
 	  <div class="form-group">
-	    <label>Last name</label>
-	    <input type="text" class="form-control" id="last-name"placeholder="last name">
+	    <label>URL de la imagen</label>
+	    <input type="text" class="form-control" id="urlimagen"placeholder="URL">
 	  </div>
-	  <div class="form-group">
-	    <label for="exampleInputEmail1">Email address</label>
-	    <input type="email" class="form-control" id="email" placeholder="Enter email">
-	  </div>
-	  <button type="submit" id="submit" class="btn btn-primary">Submit</button>
+	  <button type="submit" id="Añadir" class="btn btn-primary">Añadir</button>
 	</form>
 	</div>
 	    
