--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#pagina-inicial">Museo Webos</a>
+                <a class="navbar-brand" href="#pagina-inicial">Museo Web</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -131,15 +131,30 @@
                 </div>
             </div>
         </section>
+	 <!-- Ingresar Punto--> 
+	<section class="contact-section bg-black" id="pagina-ingresar">
+	 <div class="col-md-6" id="pagina-ingresar">
+	  <form>
+	    <div class="form-group">
+	    <label>Nombre del Punto de Interés</label>
+	    <input type="text" class="form-control" id="puntointeres" placeholder="nombre">
+	  </div>
+	  <div class="form-group">
+	    <label>URL de la imagen</label>
+	    <input type="text" class="form-control" id="urlimagen"placeholder="URL">
+	  </div>
+	  <button type="submit" id="Añadir" class="btn btn-primary">Añadir</button>
+	</form>
+	</div> 
+	    
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-       
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-	    <!-- Ingresar Punto->
+	<section class="contact-section bg-black" id="pagina-contacto">
 	 <div class="col-md-6" id="pagina-ingresar">
 	  <form>
 	    <div class="form-group">
