--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
         </section>
 	 <!-- Ingresar Punto--> 
-	<section class="contact-section bg-black" id="pagina-ingresar">
+	<section class="contact-section bg-white" id="pagina-ingresar">
 	 <div class="col-md-6" id="pagina-ingresar">
 	  <form>
 	    <div class="form-group">
