--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
                 </div>
             </div>
         </section>
+	<!-- Ingresar Punto--> 
+	<section class="contact-section bg-white" id="pagina-ingresar">
+	 <div class="col-md-6" id="pagina-ingresar">
+	  <form>
+	    <div class="form-group">
+	    <label>Nombre del Punto de Interés</label>
+	    <input type="text" class="form-control" id="puntointeres" placeholder="nombre">
+	  </div>
+	  <div class="form-group">
+	    <label>URL de la imagen</label>
+	    <input type="text" class="form-control" id="urlimagen"placeholder="URL">
+	  </div>
+	  <button type="submit" id="Añadir" class="btn btn-primary">Añadir</button>
+		</form>
+		</div> 
+	</section>  
         <!-- Contacto-->
         <section class="contact-section bg-black" id="pagina-contacto">
             <div class="container px-4 px-lg-5">
@@ -144,9 +160,9 @@
 	    <input type="text" class="form-control" id="urlimagen"placeholder="URL">
 	  </div>
 	  <button type="submit" id="Añadir" class="btn btn-primary">Añadir</button>
-	</form>
-	</div> 
-	    
+		</form>
+		</div> 
+	</section>    
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
         <!-- Bootstrap core JS-->
