--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         </section>
 	<!-- Ingresar Punto--> 
 	<section class="contact-section bg-white" id="pagina-ingresar">
+	<h1 class="mx-auto my-0 text-uppercase">Museo Web</h1>	
 	 <div class="col-md-6" id="pagina-ingresar">
 	  <form>
 	    <div class="form-group">
@@ -147,22 +148,6 @@
                 </div>
             </div>
         </section>
-	 <!-- Ingresar Punto--> 
-	<section class="contact-section bg-white" id="pagina-ingresar">
-	 <div class="col-md-6" id="pagina-ingresar">
-	  <form>
-	    <div class="form-group">
-	    <label>Nombre del Punto de Interés</label>
-	    <input type="text" class="form-control" id="puntointeres" placeholder="nombre">
-	  </div>
-	  <div class="form-group">
-	    <label>URL de la imagen</label>
-	    <input type="text" class="form-control" id="urlimagen"placeholder="URL">
-	  </div>
-	  <button type="submit" id="Añadir" class="btn btn-primary">Añadir</button>
-		</form>
-		</div> 
-	</section>    
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2022</div></footer>
         <!-- Bootstrap core JS-->
