--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </section>
 	<!-- Ingresar Punto--> 
 	<section class="contact-section bg-white" id="pagina-ingresar">
-	<h1 class="mx-auto my-0 text-uppercase">INGRESAR PUNTO INTERES</h1>	
+	<h1 class="mx-auto my-0 text-uppercase style="text-align: center">INGRESAR PUNTO INTERES</h1>	
 	 <div class="col-md-6" id="pagina-ingresar">
 	  <form>
 	    <div class="form-group">
