--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	 <div class="col-md-6" id="pagina-ingresar">
 	  <form>
 	    <label>Nombre del Punto de Interés</label>
-	    <input type="text"  id="puntointeres" placeholder="nombre">
+	    <input type="text"  id="puntointeres" placeholder="nombre" > <br><br>
 	    <label>URL de la imagen</label>
 	    <input type="text"  id="urlimagen"placeholder="URL">
 	  
