--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	    <label>Nombre del Punto de Interés</label>
 	    <input type="text"  id="puntointeres" placeholder="nombre" > <br><br>
 	    <label>URL de la imagen</label>
-	    <input type="text"  id="urlimagen"placeholder="URL">
+	    <input type="text"  id="urlimagen"placeholder="URL"> <br>
 	  
 	  <button type="submit" id="btningresar">Añadir</button>
 		</form>
