--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
 
   // Your web app's Firebase configuration
 const firebaseConfig = {
-    apiKey: "AIzaSyBpVkqcYCsQasMabKZxO4GfIAWCPQTEnG8",
-    authDomain: "pruebaingresar.firebaseapp.com",
-    databaseURL: "https://pruebaingresar-default-rtdb.firebaseio.com",
-    projectId: "pruebaingresar",
-    storageBucket: "pruebaingresar.appspot.com",
-    messagingSenderId: "1028862411233",
-    appId: "1:1028862411233:web:0daf27b7e38223fc24d2a0"
+  apiKey: "AIzaSyAVHLsWqGayikm_IyXFlqwSow0b6dM9Dkg",
+  authDomain: "bdmuseoapp.firebaseapp.com",
+  databaseURL: "https://bdmuseoapp-default-rtdb.firebaseio.com",
+  projectId: "bdmuseoapp",
+  storageBucket: "bdmuseoapp.appspot.com",
+  messagingSenderId: "110209157558",
+  appId: "1:110209157558:web:faa2b341bd35a4e606d917"
 };
 
   // Initialize Firebase
