--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 }
 
 </style>
+    
     </head>
-    	<body id="pagina-inicial">
-
+    <body id="pagina-inicial">
 	<button class="open-button" onclick="openForm()">Login</button>
 
 	<div class="form-popup" id="myForm">
@@ -104,8 +104,8 @@
     	<label for="psw"><b>Contraseña</b></label>
     	<input type="password" id="password" placeholder="Introduzca su contraseña" name="password" required>
 
-    	<button type="submit" id="login" class="btn">Ingresar</button>
-	<button  id="sighUp" class="btn">Registrarse</button>
+    	<button type="submit" class="btn">Ingresar</button>
+	<button id="sighUp" class="btn">Registrarse</button>
     	<button type=".form-container .btn" class="btn cancel" onclick="closeForm()">Cerrar</button>
 	
   	</form>
@@ -120,7 +120,6 @@
   		document.getElementById("myForm").style.display = "none";
 	}
 	</script>
-
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
@@ -148,7 +147,6 @@
                         <h1 class="mx-auto my-0 text-uppercase">Museo Web</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Museo picadisimo.</h2>
                         <a class="btn btn-primary " href="#projects">Ver Puntos</a>
-
                     </div>
                 </div>
             </div>
@@ -299,9 +297,9 @@
 
 <script type="module">
   // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.4.0/firebase-app.js";
-  import { getDatabase, set, ref, push, child, onValue update } from "https://www.gstatic.com/firebasejs/9.4.0/firebase-database.js";
-  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.4.0/firebase-auth.js";
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-app.js";
+  import { getDatabase, set, ref ,push, child, onValue, update} from "https://www.gstatic.com/firebasejs/9.10.0/firebase-database.js";
+  import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/9.10.0/firebase-auth.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -318,8 +316,10 @@ const firebaseConfig = {
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
+  
+  // Get a reference to the database service
   const database = getDatabase(app);
-  const auth = getAuth();
+	
   // write data
   submit.addEventListener('click',(e) => {
     var punt_nombre = document.getElementById('punt_nombre').value;
@@ -389,6 +389,7 @@ removeData.addEventListener('click',(e) => {
 
   });
 sighUp.addEventListener('click',(e) => {
+const auth = getAuth();
 	e.preventDefault();
   var username = document.getElementById('username').value;
   var email = document.getElementById('email').value;
@@ -475,6 +476,5 @@ logout.addEventListener('click',(e)=>{
 	
 
 });
-
 </script>
 
