--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 /* The popup form - hidden by default */
 .form-popup {
   display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
+  position: relative;
+left:810px;
+top:90px;
+right:-60px;
+
+ 
   z-index: 9;
 }
 
@@ -93,7 +95,7 @@
 	<button class="open-button" onclick="openForm()">Login</button>
 
 	<div class="form-popup" id="myForm">
-  	<form class="form-container">
+  	<form class="form-container" method ="post">
     	<h1>Login</h1>
 	<label for="username"><b>Nombre de usuario</b></label>
     	<input type="text" id="username" placeholder="Introduzca su usuario" name="username" required>
@@ -104,7 +106,7 @@
     	<label for="psw"><b>Contraseña</b></label>
     	<input type="password" id="password" placeholder="Introduzca su contraseña" name="password" required>
 
-    	<button type="submit" class="btn">Ingresar</button>
+    	<button type="submit" id="login" class="btn" onclick="cerrar()">Ingresar</button>
 	<button id="sighUp" class="btn">Registrarse</button>
     	<button type=".form-container .btn" class="btn cancel" onclick="closeForm()">Cerrar</button>
 	
@@ -114,10 +116,32 @@
 	<script>
 		function openForm() {
   		document.getElementById("myForm").style.display = "block";
+		document.getElementById("mainNav").style.display = "none";
+		document.getElementById("cabeza").style.display = "none";
+		document.getElementById("projects").style.display = "none";
+		document.getElementById("ingresarpuntito").style.display = "none";
+		document.getElementById("getData").style.display = "none";
+		document.getElementById("labelingresar").style.display = "none";
+		document.getElementById("dataTbl").style.display = "none";
+		document.getElementById("textocontacto").style.display = "none";
+		document.getElementById("pagina-contacto").style.display = "none";
 	}
 
 	function closeForm() {
   		document.getElementById("myForm").style.display = "none";
+		
+	}
+	function cerrar(){
+		document.getElementById("myForm").style.display = "none";
+		document.getElementById("mainNav").style.display = "block";
+		document.getElementById("cabeza").style.display = "block";
+		document.getElementById("projects").style.display = "block";
+		document.getElementById("ingresarpuntito").style.display = "block";
+		document.getElementById("getData").style.display = "block";
+		document.getElementById("labelingresar").style.display = "block";
+		document.getElementById("dataTbl").style.display = "block";
+		document.getElementById("textocontacto").style.display = "block";
+		document.getElementById("pagina-contacto").style.display = "block";
 	}
 	</script>
         <!-- Navigation-->
@@ -139,7 +163,7 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead" >
+        <header class="masthead" id="cabeza" >
 		
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
@@ -198,8 +222,8 @@
                 </div>
             </div>
         </section>
-	<h1 class="mx-auto my-0 text-uppercase text-center" >Ingresar Punto de Interes</h1><br><br>
-	<div class="col-md-6" >
+	<h1 class="mx-auto my-0 text-uppercase text-center" id="labelingresar" >Ingresar Punto de Interes</h1><br><br>
+	<div class="col-md-6" id="ingresarpuntito" >
 	
 	  <form style="width:100%;margin: 2px 477px;">
 	    <div class="mx-auto my-0 text-uppercase text-center">
@@ -245,7 +269,7 @@
 	</table>
 	</div>
 
-	<h1 class="mx-auto my-0 text-uppercase text-center" >Contacto</h1>				
+	<h1 class="mx-auto my-0 text-uppercase text-center" id="textocontacto" >Contacto</h1>				
         <!-- contacto-->
         <section class="contact-section bg-black" id="pagina-contacto">
             <div class="container px-4 px-lg-5">
@@ -435,6 +459,9 @@ const auth = getAuth();
         })
 
          alert('Inicio sesión correctamente, Gracias!');
+			
+
+
         // ...
       })
       .catch((error) => {
@@ -477,4 +504,3 @@ logout.addEventListener('click',(e)=>{
 
 });
 </script>
-
